--- a/style.css
+++ b/style.css
@@ -1,223 +1,107 @@
 @import url('https://fonts.cdnfonts.com/css/hubot-sans');
-*{ box-sizing: border-box; -webkit-font-smoothing: antialiased; text-rendering: optimizeLegibility; scroll-behavior: smooth;}
-html, body { height: 100%; }
 
-html::-webkit-scrollbar { display: none; }
-html { -ms-overflow-style: none; scrollbar-width: none; }
+* {
+    box-sizing: border-box;
+    -webkit-font-smoothing: antialiased;
+    text-rendering: optimizeLegibility;
+    scroll-behavior: smooth;
+}
+
+html, body {
+    height: 100%;
+}
+
+html::-webkit-scrollbar {
+    display: none;
+}
+html {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
 
 body {
     margin: 0;
-    font-family: Untitled Sans, system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Open Sans, Helvetica Neue, sans-serif;
-    background: #05060f linear-gradient(0deg,rgba(216,236,248,.06),rgba(152,192,239,.06));
-
+    font-family: 'Hubot-Sans', Untitled Sans, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background: #05060f linear-gradient(0deg, rgba(216, 236, 248, 0.06), rgba(152, 192, 239, 0.06));
     font-size: max(calc(var(--_size) * 0.03), 10px);
     --_factor: min(600px, 80vh);
     --_size: min(var(--_factor), 80vw);
 }
 
-body.gold .header h2 ,
-body.gold p,
-body.gold > * > * :not(.contact-btn) {
-    filter: invert(1) brightness(4.7);
-}
-body.gold .header h2 a{
-    filter: hue-rotate(0deg);
-}
-body.gold canvas {
-    filter: drop-shadow(2em 4em 0px #d8bd10) drop-shadow(-8em -14em 0px #d8bd10);
-}
-body.gold .header .spotlight {
-    filter: invert(1) brightness(4.7) opacity(0.5);
-}
-body.gold .dodo > div {
-    box-shadow:
-    -1em -0.2em 0.4em -1.1em #c2ccff,
-    inset 0em 0em 0em 2px #d8a910,
-    inset 0.2em 0.3em 0.2em -0.2em #c2ccff,
-    inset 10.2em 10.3em 2em -10em #d4e6ff2f;
-}
-
-body.gold .content-section,
-body.gold .content-section ::before,
-body.gold .content-section ::after{
-    filter: invert(1) brightness(4.4) opacity(1);
-}
-
 h2 {
     font-family: 'Hubot-Sans', sans-serif;
 }
+
 h2, p {
-    margin: 0; padding: 0;
-}
-h2 a {
-    text-decoration: none;
-    color: unset;
+    margin: 0;
+    padding: 0;
 }
 
 .header {
-    display: flex; width: 100%;
+    display: flex;
+    width: 100%;
     justify-content: center;
     color: #bad6f7;
     padding: 2em;
     position: absolute;
-    top: 0; left: 0; right: 0; margin: 0 auto;
-
+    top: 0;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
     opacity: 0;
     translate: 0 -1em;
     animation: load 2s ease-in 2s forwards, up 1.4s ease-out 2s forwards;
 }
-.header > :nth-child(1) {
-    font-size: 1em;
-    position: absolute; left: 0; right: 29em; margin: 0.2em auto;
-    width: fit-content;
-}
-.header > :nth-child(2) {
-    position: absolute; left: 0; right: 0; margin: 0 auto;
-    width: fit-content;
-}
-.header > h2{
+
+.header > h2 {
     opacity: 0.5;
     cursor: pointer;
     transition: opacity 0.04s ease-in-out;
 }
+
 .header > h2:hover {
     opacity: 1;
-    text-shadow: 0 2px 16px rgba(174,207,242, 0.6);
+    text-shadow: 0 2px 16px rgba(174, 207, 242, 0.6);
     width: fit-content;
 }
 
 .header > div.mid-spot {
-    width: 1.8em; height: 1.8em;
+    width: 1.8em;
+    height: 1.8em;
     border-radius: 50%;
     background: black;
     box-shadow: 0 0 1em 0 #98c0ef;
     cursor: pointer;
     transition: box-shadow 1s ease-in-out;
 }
-.header > div.mid-spot:hover {
-    box-shadow: -0.3em 0.1em 0.2em 0 #d8bd10;
-}
-body.gold .header > div.mid-spot:hover {
-    box-shadow: -0.3em 0.1em 0.2em 0 #98c0ef;
-}
-
-body.gold .header > div.mid-spot {
-    box-shadow: 0 0 1em 0 #d8bd10;
-}
-
-.header > :nth-child(2):hover ~ .spotlight {
-    animation: colorize 10s linear infinite;
-}
-@keyframes colorize {
-    0%{filter: hue-rotate(0deg); }
-    100% {filter: hue-rotate(-380deg);}
-}
-
-button.contact-btn {
-    position: absolute; left: min(46em, 60vw); right: 0; margin: 0 auto;
-    width: 8em; height: 2.4em;
-    cursor: pointer;
-    border-radius: 20em;
-    border: none;
-    transition: background 0.5s, transform 0.5s;
-
-    border: 1px solid #c2ccff33;
-    opacity: 1;
-    padding-top: 0.3em;
-
-    background: #121521;
-    color: #9dc3f7;
-    white-space:nowrap;
-}
-button.contact-btn::before {
-    content: ''; display: block; position:absolute; left: 0; top:0; border-radius: 20em;
-    width: 100%; height: 100%;
-    background: #c2ccff91 radial-gradient(farthest-side at 50% 100%, #c2ccff, transparent);
-    opacity: 0.1;
-    transition: all 0.4s ease-in-out;
-}
-button.contact-btn:hover::before {
-    background: #c2ccff1e radial-gradient(farthest-side at 50% 100%, #c2ccff, transparent);
-    opacity: 0.3;
-}
-.contact-btn .glow {
-    --border-width: 1px;
-    --loop-cycle: 24s;
-    position: absolute;
-    inset: calc(var(--border-width)* -1);
-    border-radius: 50px;
-    border: var(--border-width) solid transparent;
-    -webkit-mask: linear-gradient(transparent, transparent), linear-gradient(white, white);
-    mask: linear-gradient(transparent, transparent), linear-gradient(white, white);
-    -webkit-mask-clip: padding-box, border-box;
-    mask-clip: padding-box, border-box;
-    -webkit-mask-composite: source-in, xor;
-    mask-composite: intersect;
-    pointer-events: none;
-}
-button.contact-btn:hover .glow {
-    --loop-cycle: 2s;
-}
-.contact-btn .glow::after, .contact-btn .glow::before {
-    content: "";
-    height: 100%;
-    offset-anchor: 100% 50%;
-    background: radial-gradient(circle at 50% 50%, hsla(0, 0%, 100%, 0.75), transparent 50%), radial-gradient(circle at 50% 50%, #c2ccff 50%, transparent);
-    opacity: 0.4;
-    offset-path: rect(0 100% 100% 0 round 33px);
-    position: absolute;
-    display: inline-block;
-    -webkit-animation: loop 4s linear infinite;
-    animation: loop var(--loop-cycle) linear infinite;
-    aspect-ratio: 1 / 1;
-    transition: opacity 1s ease-in-out;
-}
-.contact-btn .glow::before {
-    animation-delay: calc( var(--loop-cycle) / -2 );
-}
-@keyframes loop {
-    100% {
-        offset-distance: 100%;
-    }
-}
-.contact-btn-content {
-    background: linear-gradient(0deg, #d8ecf8, #98c0ef);
-    background-clip: text;
-    -webkit-text-fill-color: transparent;
-    font-size: 1.2em;
-    line-height: 142%;
-}
-button.contact-btn:hover .glow::after, button.contact-btn:hover .glow::before {
-    opacity: 0.6;
-}
-@keyframes btn-rot {
-    0% { rotate: 0deg; }
-    100% { rotate: 360deg; }
-}
 
 .header .spotlight {
     pointer-events: none;
-    position: absolute; left: 0; right: 0; top:0; margin: 0 auto;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    margin: 0 auto;
     transition: filter 1s ease-in-out;
-
-    height: 42em; width: 100%;
+    height: 42em;
+    width: 100%;
     overflow: hidden;
 }
+
 .header .spotlight > div {
     border-radius: 0 0 50% 50%;
-    position: absolute; left: 0; right: 0; margin: 0 auto;
+    position: absolute;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
     top: 3em;
-    width: 30em; height: max(42em, 86vh);
+    width: 30em;
+    height: max(42em, 86vh);
     background-image: conic-gradient(from 0deg at 50% -5%, transparent 45%, #bdd7f6a6 46% 56%, transparent 57%), conic-gradient(from 0deg at 50% 0%, transparent 15%, #bdd7f6bd 16% 56%, transparent 57%);
     transform: translateY(0.2em);
     opacity: 0.14;
     pointer-events: none;
     animation: spotlight 6s ease-out 2s forwards;
-}
-@keyframes spotlight {
-    0% { opacity: 0; }
-    80% { opacity: 0.1; }
-    100% { opacity: 0.14; }
 }
 
 @keyframes load {
@@ -230,28 +114,32 @@ button.contact-btn:hover .glow::after, button.contact-btn:hover .glow::before {
     0% { translate: 0 3em; }
     100% { translate: 0; }
 }
-a {
-    cursor: crosshair;
+
+button.contact-btn {
+    position: absolute;
+    left: min(46em, 60vw);
+    right: 0;
+    margin: 0 auto;
+    width: 8em;
+    height: 2.4em;
+    cursor: pointer;
+    border-radius: 20em;
+    border: none;
+    transition: background 0.5s, transform 0.5s;
+    border: 1px solid #c2ccff33;
+    opacity: 1;
+    padding-top: 0.3em;
+    background: #121521;
+    color: #9dc3f7;
+    white-space: nowrap;
 }
 
-.section {
-    position: relative;
-    height: 100%;
-    width: 100%;
-    display: grid;
-    place-content: center;
-}
-
-.canvas-container {
-    --size: var(--_size);
-    position: relative;
-    height: var(--size);
-    width: var(--size);
-    max-height: 100%;
-    max-width: 100%;
-    margin: auto;
-    display: grid;
-    place-content: center;
+.contact-btn-content {
+    background: linear-gradient(0deg, #d8ecf8, #98c0ef);
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    font-size: 1.2em;
+    line-height: 142%;
 }
 
 .content {
@@ -265,41 +153,10 @@ a {
     translate: 0 1em;
     animation: load 2s ease-in 2s forwards, up 1.4s ease-out 2s forwards;
 }
-@media (min-width: 768px) {
-    .content {
-        width: min(65%, 30em);
-    }
-}
-
-.dodo {
-    --size: var(--_size);
-    position: relative;
-    height: var(--size);
-    width: var(--size);
-    max-height: 100%;
-    max-width: 100%;
-    margin: auto;
-    display: grid;
-    place-content: center;
-}
-
-.dodo > div {
-    height: 100%;
-    width: 100%;
-    transform: rotateX(75deg) rotateZ(45deg) rotateY(10deg);
-    transform-style: preserve-3d;
-    display: grid;
-    place-content: center;
-    transition: all 1s ease-out;
-    box-shadow:
-    -1em -0.2em 0.4em -1.1em #c2ccff,
-    inset 0em 0em 0em 2px #98c0ef,
-    inset 0.2em 0.3em 0.2em -0.2em #c2ccff,
-    inset 10.2em 10.3em 2em -10em #d4e6ff2f;
-}
 
 .dodo > div > div {
-    height: 22em; width: 14em;
+    height: 22em;
+    width: 14em;
     background: url('dodo.png') center/contain no-repeat;
     translate: 0 1em;
     position: relative;
@@ -307,48 +164,8 @@ a {
     animation: mount 4s ease-in-out forwards 3s;
     opacity: 0;
 }
+
 @keyframes mount {
     0% { opacity: 0; }
     100% { opacity: 1; }
-}
-
-@keyframes move1 {
-    0%, 100% { translate: 0 0 0; rotate: 0; }
-    50% { translate: 0.3em -0.1em 0.3em; rotate: -0.8deg; }
-}
-@keyframes move2 {
-    0%, 100% { translate: 0 0 0; rotate: 0; }
-    50% { translate: 0.1em -0.3em 0.1em; rotate: 0.6deg; }
-}
-@keyframes move3 {
-    0%, 100% { translate: 0 0 0; rotate: 0; }
-    50% { translate: -0.3em -0.3em 0.1em; rotate: 1deg; }
-}
-@keyframes move4 {
-    0%, 100% { translate: 0 0 0; rotate: 0; }
-    50% { translate: -0.1em -0.1em 0.2em; rotate: -1.2deg; }
-}
-@keyframes move5 {
-    0%, 100% { translate: 0 0 0; rotate: 0; }
-    50% { translate: -0.4em 0.2em 0.1em; rotate: 1.4deg; }
-}
-@keyframes move6 {
-    0%, 100% { translate: 0 0 0; rotate: 0; }
-    50% { translate: 0.3em 0.3em 0.1em; rotate: -1.8deg; }
-}
-
-@keyframes light {
-    0% {
-        opacity: 0;
-        translate: -2em 1em;
-        filter: blur(3px);
-    }
-    20% {
-        opacity: 1;
-        translate: -2em 1em;
-        filter: blur(0);
-    }
-    100% {
-        translate: 20em -2em;
-    }
 }
