--- a/style.css
+++ b/style.css
@@ -512,63 +512,70 @@ p {
     }
 }
 
-.mountains {
-    position: absolute; left: 0; right: 0; top: 31em; margin: auto;
-    width: 100%; height: 10em;
-    pointer-events: none;
-}
-.mountains::before {
-    content: ''; display: block;
-    width: 100%; height: 500%;
-    position: absolute; top: 0%;
-    background: linear-gradient(90deg, #121521 0%, transparent 50%);
-    background: linear-gradient(0deg, #121521 80%, transparent 90%);
-    z-index: 2;
-}
-.mountains > div {
-    box-shadow:
-    -1em -0.2em 0.4em -1.1em #c2ccff,
-    inset 0em 0em 0em 2px #c2ccff,
-    inset 0.2em 0.3em 0.2em -0.2em #c2ccff,
-    inset 10.2em 10.3em 2em -10em #d4e6ff2f;
-    background: #121521;
-    z-index: 1;
-    filter: brightness(0.8);
-    position: absolute; left: 0; right: 0; margin: auto;
-    width: 20em; height: 20em;
-    rotate: 45deg;
-}
-.mountains > div:nth-child(1) {
-    bottom: -240%;
-    translate: -6em 2em;
-    animation: mountainload1 2s ease-out 2.4s forwards;
-}
-.mountains > div:nth-child(2) {
-    bottom: -240%;
-    translate: -2em 0em;
-    width: 14em; height: 20em;
-    animation: mountainload2 2s ease-out 2.2s forwards;
-}
-.mountains > div:nth-child(3) {
-    bottom: -240%;
-    translate: 6em 3em;
-    animation: mountainload1 2s ease-out 2s forwards;
-}
-@keyframes mountainload1 {
-    0% { bottom: -240%; }
-    100% { bottom: -140%; }
-}
-@keyframes mountainload2 {
-    0% { bottom: -240%; }
-    100% { bottom: -108%; }
-}
-.mountains > div::before {
-    content: ''; display: block;
-    background: repeating-radial-gradient( at 100% 100%, transparent 0%, #c2ccff22 2px, transparent 4px);
-    width: 12em; height: 12em;
+.dodo {
     position: absolute;
-    left: 0; top: 0;
-    border-bottom-right-radius: 100%;
+    left: 0;
+    right: 0;
+    top: 31em;
+    margin: auto;
+    width: 20em;
+    height: 20em;
+    background: #121521;
+    border-radius: 50%;
+    z-index: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0 0 0 1em #c2ccff; /* adds some light to the overall shape */
+}
+
+.dodo .beak {
+    position: absolute;
+    background: #ffcc00;
+    width: 8em;
+    height: 5em;
+    border-radius: 50%;
+    transform: rotate(30deg);
+    top: 60%;
+    left: 50%;
+    margin-left: -4em; /* Centering the beak */
+}
+
+.dodo .eye {
+    position: absolute;
+    background: #fff;
+    width: 4em;
+    height: 4em;
+    border-radius: 50%;
+    box-shadow: inset 0 0 2px #000;
+}
+
+.dodo .eye-left {
+    top: 30%;
+    left: 20%;
+}
+
+.dodo .eye {
+    top: 30%;
+    right: 20%;
+}
+
+.dodo .cheek {
+    position: absolute;
+    background: #ff9999;
+    width: 5em;
+    height: 5em;
+    border-radius: 50%;
+}
+
+.dodo .cheek-left {
+    bottom: 20%;
+    left: 10%;
+}
+
+.dodo .cheek-right {
+    bottom: 20%;
+    right: 10%;
 }
 
 .hero-spacer {
