--- a/style.css
+++ b/style.css
@@ -512,59 +512,63 @@ p {
     }
 }
 
-.dodo {
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 31em;
-    margin: auto;
-    width: 20em;
-    height: 20em;
-    background: #121521;
-    border-radius: 50%;
-    z-index: 1;
+body {
+    margin: 0;
+    background: #e0e0e0; /* Background color to help see the dodo */
     display: flex;
     justify-content: center;
     align-items: center;
-    box-shadow: 0 0 0 1em #c2ccff; /* adds some light to the overall shape */
+    height: 100vh;
+}
+
+.dodo {
+    position: relative;
+    width: 12em;
+    height: 12em;
+    background: #121521;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0 0 0 0.5em #c2ccff;
 }
 
 .dodo .beak {
     position: absolute;
     background: #ffcc00;
-    width: 8em;
-    height: 5em;
+    width: 6em;
+    height: 4em;
     border-radius: 50%;
     transform: rotate(30deg);
-    top: 60%;
+    top: 70%;
     left: 50%;
-    margin-left: -4em; /* Centering the beak */
+    margin-left: -3em; /* Centering the beak */
 }
 
 .dodo .eye {
     position: absolute;
     background: #fff;
-    width: 4em;
-    height: 4em;
+    width: 3em;
+    height: 3em;
     border-radius: 50%;
     box-shadow: inset 0 0 2px #000;
 }
 
 .dodo .eye-left {
     top: 30%;
-    left: 20%;
+    left: 25%;
 }
 
-.dodo .eye {
+.dodo .eye-right {
     top: 30%;
-    right: 20%;
+    right: 25%;
 }
 
 .dodo .cheek {
     position: absolute;
     background: #ff9999;
-    width: 5em;
-    height: 5em;
+    width: 4em;
+    height: 4em;
     border-radius: 50%;
 }
 
@@ -577,6 +581,7 @@ p {
     bottom: 20%;
     right: 10%;
 }
+
 
 .hero-spacer {
     height: 40em;
